force-app/main/default/objects/Project_Team__c/fields/Complex_Project__c.field-meta.xml
<CustomField>
    <fullName>Complex_Project__c</fullName>
    <label>Complex Project</label>
    <referenceTo>Complex_Project__c</referenceTo>
    <relationshipLabel>Project Team</relationshipLabel>
    <relationshipName>Project_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>