force-app/main/default/objects/Project_Team__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>