force-app/main/default/objects/Project_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>QA Tester</fullName>
            </value>
            <value>
                <fullName>Project Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>