force-app/main/default/objects/Project_Team__c/validationRules/User_Required_to_add_Team_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Required_to_add_Team_Member</fullName>
    <active>true</active>
    <errorConditionFormula>Team_Member__r.RecordType.Name  = &apos;Ubiquity Employee&apos;
&amp;&amp;
Related_User__c = &apos;&apos;</errorConditionFormula>
    <errorMessage>Please add the User associated with the Team Member</errorMessage>
</ValidationRule>